StoryPointEstimatorBlazorApp/wwwroot/css/site.css
.appbar {
    font-size: 24px;
    font-family: 'Ubuntu', sans-serif;
    background-color: #4B27FE;
}

.buttons-container {
    padding-top: 50px;
    margin: auto;
    width: 50%;
    display: flex;
    justify-content: center;
}

.buttons {
    background-color: #4B27FE;
    color: white;
    width: 200px;
    height: 200px;
    border-radius: 50%;
    padding: 5px;
    min-width: 200px
}
    .buttons:hover {
        background-color: #21A7EC;
        color: white;
    }
    .buttons:focus {
        background-color: #21A7EC;
        color: white;
    }
.mainContainer {
    display: flex;
    margin-top: 1%;
    justify-content: center;
}
.tool-buttons-container {
    justify-content: space-evenly;
    min-width: 200px;
    max-width: 200px;
}

.tool-buttons {
    background-color: #4B27FE;
    color: white;
    width: 81px;
    height: 81px;
    border-radius: 50%;
    margin: 10px;
    font-size: 36px;
    font-family: 'Ubuntu', sans-serif;
    min-width: 81px;
    padding: 23px;
}

.tool-buttons:hover {
    background-color: #3e1fdd;
    color: white;
}
.tool-buttons:focus {
    background-color: #21A7EC;
    color: white;
}

.roomLabel {
    background-color: #4B27FE;
    color: white;
    font-family: 'Ubuntu';
    font-size: 20px;
    font-weight: bold;
}

.appbar-buttons {
    background-color: #4B27FE;
    color: white;
    font-family: 'Ubuntu';
    font-size: 20px;
    font-weight: bold;
    padding: 8px;
    border-radius: 5px;
}
.appbar-buttons-text {
    color: white;
    font-family: 'Ubuntu';
    font-size: 20px;
    font-weight: bold;
}
.appbar-buttons-timer {
    background-color: red;
    color: white;
    font-family: 'Ubuntu';
    font-size: 20px;
    font-weight: bold;
    padding: 8px;
    border-radius: 10%;
}
.appbar-buttons-clicked {
    background-color: #21A7EC;
    color: white;
    font-family: 'Ubuntu';
    font-size: 20px;
    font-weight: bold;
    padding: 2px;
    border-radius: 5px;
}

.admin-tools-buttons {
    background-color: #4B27FE;
    color: white;
    font-family: 'Ubuntu';
    font-size: 14px;
    padding: 7px;
    margin: 5px;
    font-weight: bold;
}
    .admin-tools-buttons:hover {
        color: white;
        background-color: lightgrey;
        font-weight: bold;
    }
.admin-tools-text {
    color: white;
    font-family: 'Ubuntu';
    font-size: 14px;
    font-weight: bold;
}
.custom-scale-input {
    min-width: 200px;
    max-width: 200px;
    display: flex;
    justify-content: center;
}

.mud-chip {
    min-width: 40px;
    padding: 25px;
    background-color: #4B27FE;
    color: white;
    font-family: 'Ubuntu';
    font-size: 25px;
    font-weight: bold;
    justify-content: center;
}
    .mud-chip:hover {
        background-color: #4B27FE;
        color: white;
    }

.timer-buttons {
    background-color: #4B27FE;
    color: white;
    width: 100px;
    height: 100px;
    border-radius: 50%;
    margin: 10px;
    font-size: 22px;
    font-family: 'Ubuntu';
    font-weight: bold;
    min-width: 100px;
    padding: 23px;
}
    .timer-buttons:hover {
        background-color: #3e1fdd;
        color: #4B27FE;
    }
.timer-buttons-text {
    font-size: 22px;
    font-family: 'Ubuntu';
    font-weight: bold;
}
.timer-display {
    background-color: #4B27FE;
    color: white;
    width: 400px;
    height: 400px;
    min-width: 400px;
    font-size: 40px;
    font-family: 'Ubuntu';
    font-weight: bold;
    border-radius: 50%;
    padding-top: 140px;
    padding-left: 65px;
}
.timer-display-text-pause {
    color: white;
    font-size: 30px;
    font-family: 'Ubuntu';
    font-weight: bold;
    padding-left: 80px;
}
.timer-display-text {
    font-size: 70px;
    font-family: 'Ubuntu';
    font-weight: bold;
}
.timer-notification-text {
    
    font-family: 'Ubuntu';
    font-size: 20px;
    font-weight: bold;
}
.timer-input {
    width: 113px;
    padding-top: 10px;
    padding-left: 20px;
    display: inline-flex;
    justify-content: start;
}
.mud-paper-buttons {
    padding-left: 10px;
    padding-right: 10px;
    padding-bottom: 10px;
    width: 650px;
    min-width: 650px;
    max-width: 650px;
    margin-right: 10px;
}

.mud-paper-table {
    width: 600px;
    min-width: 600px;
    max-width: 600px;
    padding: 1px;
    padding-top: 7px;
}

.mud-paper-room-labels {
    padding: 5px;
    margin: 10px;
}

.mud-paper-tool-name {
    font-family: 'Ubuntu';
    font-size: 30px;
    font-weight: bold;
    min-height: 60px;
    max-height: 70px;
    padding: 5px;
    justify-content: left;
}
.mud-paper-custom-scale {
    font-family: 'Ubuntu';
    font-size: 30px;
    font-weight: bold;
    min-height: 60px;
    max-height: 70px;
    padding: 5px;
    display: flex;
    justify-content: left;
    align-content: center;
}
.mud-paper-admin-tools {
    width: 600px;
    min-width: 600px;
    max-width: 600px;
    padding: 1px;
    padding-top: 7px;
}

.custom-voting-tools {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
}

.slider{
    display: flex;
    flex-direction: column;
    margin: 10px;
    font-family: 'Ubuntu';
    margin-top: 0px;
}

.mud-paper-timer {
    padding-top: 100px;
    display: flex;
    justify-content: space-evenly;
}

.table-vote-text {
    font-size: 16px;
    font-family: 'Ubuntu';
    font-weight: bold;
}

.vote-background {
    background-color: #4B27FE;
    color: white;
    border-radius: 50%;
    width: 35px;
    height: 35px;
    padding-top: 5px;
    display: flex;
    justify-content: center;
}

.table-area {
    display: flex;
    justify-content: right;
}

